Improve markup, punctuation, spelling.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -20,53 +20,52 @@ to subscribe to its mailing list, and important dates in its history.
 The editor will add this section.
 <h2>Abstract</h2>
 
-
-This SRFI proposes a simple library for programmatic drawing of
+<p>This SRFI proposes a simple library for programmatic drawing of
 pictures compatible with the Section 2.2.4 of the Structure and
-Interpretation of Computer Programs.
+Interpretation of Computer Programs.</p>
 
-It aims to close the gap between the Scheme suggested for study in
-the book and the portable Scheme.
+<p>It aims to close the gap between the Scheme suggested for study in
+the book and portable Scheme.</p>
 
 <h2>Issues</h2>
 
 <ol>
-<li>Parameteriseing the canvas name or the canvas size may lead to unexpected
+<li>Parameterizing the canvas name or the canvas size may lead to unexpected
 results.</li>
 <li> <code>canvas-reset</code> and <code>canvas-cleanup</code> are not
 called <code>canvas-reset!</code> and <code>canvas-cleanup!</code>,
-although they are definitely called for side-effects. However, in SICP
+although they are definitely called for side effects. However, in SICP
 the functions <code>draw-line</code> and <code>rogers</code> do not
-bear an exclamation mark as well.</li>
-<li><code>canvas-name</code> and <code>canvas-size</code> are not very
-well behaving.</li>
+bear an exclamation mark, either.</li>
+<li><code>canvas-name</code> and <code>canvas-size</code> do not behave very
+well.</li>
 </ol>
 
 <h2>Rationale</h2>
 
-The "Structure and Interpretation of Computer Programs" is one of the
+<p>The <cite>Structure and Interpretation of Computer Programs</cite> is one of the
 world's most famous programming textbooks. The code examples in the book are
 given in Scheme, and the exercises are mostly expected to be done in Scheme.
-The examples and exercises are best executed with a Scheme system support
+The examples and exercises are best executed with a Scheme system
 that implements a reasonable subset of the Scheme language.
-Furthermore, the textbook "assumes" the existence of several primitives not
+Furthermore, the textbook assumes the existence of several primitives not
 included in any of the Scheme reports.
 Most of these primitives are already either covered by other relevant SRFIs,
 or can be implemented on top of those.
 The picture language of the Section 2.2.4 cannot, however, be portably
 implemented using any of the portable Scheme libraries.
-This SRFI aims to fill this gap.
+This SRFI aims to fill this gap.</p>
 
 <OL>
 <LI> Racket (complete) implementation of the picture language.
     <A HREF="https://planet.racket-lang.org/package-source/soegaard/sicp.plt/2/1/planet-docs/sicp-manual/index.html"> Link </A>
 </LI>
 
-<LI> Racket SCIP Library, Picture Language.
+<LI> Racket SICP Library, Picture Language.
     <A HREF="https://docs.racket-lang.org/sicp-manual/SICP_Picture_Language.html"> Link </A>
 </LI>
 
-<LI> Structure and Interpretation of Computer Programs, companion website. Problem Set 4 (Picture Language).
+<LI> Structure and Interpretation of Computer Programs, companion web site. Problem Set 4 (Picture Language).
     <A HREF="https://mitpress.mit.edu/sites/default/files/sicp/psets/ps4hnd/readme.html"> Link </A>
 </LI>
 
@@ -85,23 +84,23 @@ This SRFI aims to fill this gap.
 </OL>
 
 
-This SRFI is not a complete implementation of the picture language as it is
+<p>This SRFI is not a complete implementation of the picture language as it is
 presented in the Section 2.2.4.
 This is intentional. The scope of this SRFI is not to implement the whole
 drawing library presented, but only to implement the minimal subset on top of
 which the code from the book can be run.
-This leads to functions accepting as arguments certain data structures,
-constructors for which are not provided within this SRFI.
+This leads to functions accepting as arguments certain data structures
+for which constructors are not provided within this SRFI.
 Those should be sufficiently easy to implement using the code from the book.
-Nevertheless, the code from the reference implementation test file can be
-reused.
+Nevertheless, the code from the sample implementation test file can be
+reused.</p>
 
-<h1>Specification</h1>
+<h2>Specification</h2>
 
 
 <!-- <P> -->
 <!-- <DL> -->
-<!-- <DT><U>Parameter:</U> <B>canvas-size</B> -->
+<!-- <DT><U>Parameter:</U> <code>canvas-size</code> -->
 <!-- <DD> -->
 <!-- For pixel-based displays, defines the size of the canvas in pixels. -->
 <!-- For all other types of displays, defines the size of the canvas in the units -->
@@ -112,107 +111,93 @@ reused.
 
 <!-- <P> -->
 <!-- <DL> -->
-<!-- <DT><U>Parameter:</U> <B>canvas-name</B> -->
+<!-- <DT><U>Parameter:</U> <code>canvas-name</code> -->
 <!-- <DD> -->
 <!-- Defines a system-dependent name for a file. -->
 <!-- </DL> -->
 
-<P>
 <DL>
-<DT><U>Function:</U> <B>(canvas-reset)</B>
+<DT><U>Function:</U> <code>(canvas-reset)</code>
 <DD>
 Creates a new blank canvas on which subsequent calls to drawing functions shall
 draw.
-</DL>
 
-<P>
-<DL>
-<DT><U>Function:</U> <B>(canvas-refresh)</B>
+<DT><U>Function:</U> <code>(canvas-refresh)</code>
 <DD>
 Returns a system-dependent identifier (not to be confused with Scheme
 identifiers) of the canvas on which the functions from
-this package may have drawn.
-The canvas may not exist unless it has been drawn at.
-</DL>
+this package may draw.
+The canvas may not exist unless it has been drawn on.
 
-<P>
-<DL>
-<DT><U>Function:</U> <B>(canvas-cleanup)</B>
+<DT><U>Function:</U> <code>(canvas-cleanup)</code>
 <DD>
 Deletes the current canvas and cleans the space it occupies.
-</DL>
 
-<P>
-<DL>
-<DT><U>Function:</U> <B>(draw-line begin end)</B>
+<DT><U>Function:</U> <code>(draw-line start end)</code>
 <DD>
-Draws a line on the canvas starting at <code>(car begin)</code> , <code> (car
-(cdr begin))</code> and ending at <code>(car end)</code> , <code> (car
+Draws a line on the canvas starting at <code>(car start)</code> , <code> (car
+(cdr start))</code> and ending at <code>(car end)</code> , <code> (car
 (cdr end))</code>.
 
-It is an error if <b>begin</b> is not a list of at least two numbers.
-It is an error if <b>end</b> is not a list of at least two numbers.
-</DL>
+It is an error if <code>start</code> is not a list of at least two numbers.
+It is an error if <code>end</code> is not a list of at least two numbers.
 
-<P>
-<DL>
-<DT><U>Function:</U> <B>(rogers v-list)</B>
+<DT><U>Function:</U> <code>(rogers v-list)</code>
 <DD>
-Draws an image of MIT’s founder, William Barton Rogers, as shown in
-Figure 2.11 of SICP, on the canvas in the way that it fits the frame defined
+<p>Draws an image of MIT's founder, William Barton Rogers, as shown in
+Figure 2.11 of SICP, on the canvas so that it fits the frame defined
 by the vectors <code>(car v-list)</code>, <code>(cadr v-list)</code> and
-<code>(caddr v-list)</code> in a natural linear algebraic way.
+<code>(caddr v-list)</code> in a natural linear algebraic way.</p>
 
 <p>
-It is an error if <b>v-list</b> is not a list of at least three elements,
-each of which is a list of at least two numbers.
+It is an error if <code>v-list</code> is not a list of at least three elements,
+each of which is a list of at least two numbers.</p>
 
 <p>
 <code>v-list</code> may be one of the possible implementations of a frame,
 in the SICP terminology. However, in order to avoid nudging the potential
 users of the library into a particular implementation of frames, we
-opted for specifying one of the possible underlying data structures directly.
+opted to specify one of the possible underlying data structures directly.
 Converting between this representation, as well as any other representation,
-should be a relatively simple exercise.
+should be a relatively simple exercise.</p>
 
 </DL>
 
-<h2>Additional functions</h2>
+<h3>Additional functions</h3>
 
-These functions, although they are not strictly needed for SICP, may make
-programming with the picture language less mundane.
+<p>These functions, although they are not strictly needed for SICP, may make
+programming with the picture language less mundane.</p>
 
-<P>
 <DL>
-<DT><U>Function:</U> <B>(draw-bezier . v-list)</B>
+<DT><U>Function:</U> <code>(draw-bezier . v-list)</code>
 <DD>
 
-Draws a cubic Bezier curve between the first and the last points in the
+<p>Draws a cubic Bezier curve between the first and the last points in the
 <code>v-list</code>. If the list has four elements, the middle two are
 used as knots. If the list has three elements, the curve is a quadric curve.
-Otherwise the result is unspecified.
+Otherwise the result is unspecified.</p>
 
 <p>
-It is an error if <b>v-list</b> is not a list of at least three elements,
-each of which is a list of at least two numbers.
+It is an error if <code>v-list</code> is not a list of at least three elements,
+each of which is a list of at least two numbers.</p>
 
-<P>
-<DL>
-<DT><U>Function:</U> <B>(jpeg-file->painter file-name)</B>
+<DT><U>Function:</U> <code>(jpeg-file->painter file-name)</code>
 <DD>
 
-If <code>file-name</code> exists and is a JPEG file,
+<p>If <code>file-name</code> exists and is a JPEG file,
 <code>jpeg-file->painter</code> returns
 a painter similar to <code>rogers</code>, that is a procedure that
 accepts a frame and draws the image located at <code>file-name</code>
 shifted, rotated, and skewed to fit into the frame.
-Otherwise, the result is unspecified.
+Otherwise, the result is unspecified.</p>
+</DL>
 
 
 <h2>Implementation</h2>
 
-The "199.sld" and "199.scm" constitute a simple file-based implementation, in which
-the "system-dependent identifier" corresponds to a file name.
+<p>The <code>203.sld</code> and <code>203.scm</code> files constitute
+a simple file-based implementation, in which the "system-dependent
+identifier" corresponds to a file name.</p>
 
 <h2>Acknowledgements</h2>
 
