--- a/srfi-203.html
+++ b/srfi-203.html
@@ -14,10 +14,13 @@
 
 <h2>Status</h2>
 
+<p>This SRFI is currently in <em>draft</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+203+at+srfi+dotschemers+dot+org">srfi-203@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-203">archive</a>.</p>
+<ul>
+  <li>Received: 2020-07-08</li>
+  <li>60-day deadline: 2020-09-06</li>
+  <li>Draft #1 published: 2020-07-08</li>
+</ul>
 
-??? the draft/final/withdrawn status of the SRFI, information on how
-to subscribe to its mailing list, and important dates in its history.
-The editor will add this section.
 <h2>Abstract</h2>
 
 <p>This SRFI proposes a simple library for programmatic drawing of
