--- a/srfi-203.html
+++ b/srfi-203.html
@@ -80,7 +80,7 @@ This SRFI aims to fill this gap.</p>
     <A HREF="https://github.com/skanev/playground/tree/master/scheme/sicp/02/showcase/picturelang"> Link </A>
 </LI>
 
-<LI> Procedural Geometry by Peter Henderson.
+<LI> Functional Geometry by Peter Henderson.
     <A HREF="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.137.1503"> Link </A>
 </LI>
 
