Integrate editor suggestions

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 00:14:33 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:03:03 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -39,6 +39,7 @@ the procedures <code>draw-line</code> and <code>rogers</code> do not
 bear an exclamation mark, either.</li>
 <li><code>canvas-name</code> and <code>canvas-size</code> do not behave very
 well.</li>
+<li>The sample implementation litters in the file system with bogus files.</li>
 </ol>
 
 <h2>Rationale</h2>
@@ -56,32 +57,12 @@ The picture language of the Section 2.2.4 cannot, however, be portably
 implemented using any of the portable Scheme libraries.
 This SRFI aims to fill this gap.</p>
 
-<OL>
-<LI> Racket (complete) implementation of the picture language.
-    <A HREF="https://planet.racket-lang.org/package-source/soegaard/sicp.plt/2/1/planet-docs/sicp-manual/index.html"> Link </A>
-</LI>
+<p>
+Potentially, this SRFI may serve as one of the building blocks on
+which a (larger) SRFI dedicated to fully providing all the
+language facilities assumed by SICP may be implemented.
+</p>
 
-<LI> Racket SICP Library, Picture Language.
-    <A HREF="https://docs.racket-lang.org/sicp-manual/SICP_Picture_Language.html"> Link </A>
-</LI>
-
-<LI> Structure and Interpretation of Computer Programs, companion web site. Problem Set 4 (Picture Language).
-    <A HREF="https://mitpress.mit.edu/sites/default/files/sicp/psets/ps4hnd/readme.html"> Link </A>
-</LI>
-
-<LI> The Picture Language implementation in script-fu by mngu2382.
-    <A HREF="https://mngu2382.github.io/sicp/chapter2/00-notes02a.html"> Link </A>
-</LI>
-
-<LI> The Picture Language implementation in Racket by skanev.
-    <A HREF="https://github.com/skanev/playground/tree/master/scheme/sicp/02/showcase/picturelang"> Link </A>
-</LI>
-
-<LI> Procedural Geometry by Peter Henderson.
-    <A HREF="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.137.1503"> Link </A>
-</LI>
-
-</OL>
 
 
 <p>This SRFI is not a complete implementation of the picture language as it is
@@ -192,6 +173,41 @@ shifted, rotated, and skewed to fit into the frame.
 Otherwise, the result is unspecified.</p>
 </DL>
 
+<h2> Examples </h2>
+
+<p>
+The exemplar use of this SRFI can be found in the
+attached <code>srfi-sicp-pictures.org</code> file, which exploits
+the <code>org-display-inline-images</code> feature of Emacs"'" <code>org-mode</code>.
+</p>
+
+The code below is more or less a copy of the code from the test. When
+in doubt, consider referring to the org file.
+
+<code>
+(import (scheme red))
+(import (srfi 203))
+
+(define (make-vect xcor ycor . o)
+  (append (list xcor) (list ycor) o))
+
+(define (make-frame origin edge1 edge2)
+  (list origin edge1 edge2))
+
+(canvas-reset)
+(landau (make-frame (make-vect 0 0) (make-vect 0.5 0.0) (make-vect 0.0 0.5)))
+(rogers (make-frame (make-vect 0.5 0.5) (make-vect 0.5 0.0) (make-vect 0.0 0.5)))
+(draw-line (make-vect 0.5 0.5) (make-vect 0 1.0))
+(draw-bezier (make-vect 0.0 0.5)
+             (make-vect 0.0 1)
+             (make-vect 0.5 0.5)
+             (make-vect 0.5 1)
+)
+(define testpainter (jpeg-file->painter "lambda.jpg"))
+(testpainter (make-frame (make-vect 0.5 0.0) (make-vect 0.5 0.1) (make-vect 0.1 0.5)))
+(display (canvas-refresh))
+
+</code>
 
 <h2>Implementation</h2>
 
@@ -199,9 +215,51 @@ Otherwise, the result is unspecified.</p>
 a simple file-based implementation, in which the "system-dependent
 identifier" corresponds to a file name.</p>
 
+
+<h2>References</h2>
+<OL>
+<LI> Racket (complete) implementation of the picture language.
+    <A HREF="https://planet.racket-lang.org/package-source/soegaard/sicp.plt/2/1/planet-docs/sicp-manual/index.html"> Link </A>
+</LI>
+
+<LI> Racket SICP Library, Picture Language.
+    <A HREF="https://docs.racket-lang.org/sicp-manual/SICP_Picture_Language.html"> Link </A>
+</LI>
+
+<LI> Structure and Interpretation of Computer Programs, companion web site.
+    <A HREF="https://mitpress.mit.edu/sites/default/files/sicp/index.html"> Link </A>
+</LI>
+
+
+<LI> Structure and Interpretation of Computer Programs, companion web site. Problem Set 4 (Picture Language).
+    <A HREF="https://mitpress.mit.edu/sites/default/files/sicp/psets/ps4hnd/readme.html"> Link </A>
+</LI>
+
+<LI> The Picture Language implementation in script-fu by mngu2382.
+    <A HREF="https://mngu2382.github.io/sicp/chapter2/00-notes02a.html"> Link </A>
+</LI>
+
+<LI> The Picture Language implementation in Racket by skanev.
+    <A HREF="https://github.com/skanev/playground/tree/master/scheme/sicp/02/showcase/picturelang"> Link </A>
+</LI>
+
+<LI> Functional Geometry by Peter Henderson.
+    <A HREF="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.137.1503"> Link </A>
+</LI>
+
+<LI> Unofficial PDF of SICP, second edition.
+     <A HREF="https://web.mit.edu/alexmv/6.037/sicp.pdf"> PDF </A>
+     </br>
+     <A HREF="https://github.com/jrincayc/sicp-pdf"> Source </A>
+</LI>
+
+
+</OL>
+
 <h2>Acknowledgements</h2>
 
 ??? credit where it is due
+
 
 <h2>Copyright</h2>
 Copyright &copy; Vladimir Nikishkin (2020).
