Replace <code> with <pre>

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:03:03 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:09:16 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -184,7 +184,7 @@ the <code>org-display-inline-images</code> feature of Emacs"'" <code>org-mode</c
 The code below is more or less a copy of the code from the test. When
 in doubt, consider referring to the org file.
 
-<code>
+<pre>
 (import (scheme red))
 (import (srfi 203))
 
@@ -207,7 +207,7 @@ in doubt, consider referring to the org file.
 (testpainter (make-frame (make-vect 0.5 0.0) (make-vect 0.5 0.1) (make-vect 0.1 0.5)))
 (display (canvas-refresh))
 
-</code>
+</pre>
 
 <h2>Implementation</h2>
 
