--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:23:24 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:25:03 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -59,9 +59,9 @@ This SRFI aims to fill this gap.</p>
 
 <p>
 Potentially, this SRFI may serve as one of the building blocks on
-which another SRFI (similar in purpose to the SRFI-96), dedicated to
+which another SRFI, dedicated to
 providing in full all the
-language facilities assumed by SICP, may be implemented.
+language facilities assumed by SICP (similarly to the SRFI-96), may be implemented.
 </p>
 
 
