--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 11:25:03 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 12:52:57 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <body>
     <h1><a href="https://srfi.schemers.org/"><img class="srfi-logo" src="https://srfi.schemers.org/srfi-logo.svg" alt="SRFI logo" /></a>203: A Simple Picture Language in the Style of SICP</h1>
 
-<p>by Vladimir Nikishkin</p>
+<p>by Vladimir Nikishkin (lockywolf gmail.com)</p>
 
 <h2>Status</h2>
 
