--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="authors">by Vladimir Nikishkin</p>
     <p class="based-on"></p>
     <p class="status">status: <em>draft</em> (2020-06-25)</p>
-    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=binding">Binding</a>, <a href="https://srfi.schemers.org/?keywords=control-flow">Control Flow</a>, <a href="https://srfi.schemers.org/?keywords=pattern-matching">Pattern Matching</a></p>
+    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=miscellaneous">Miscellaneous</a></p>
 
     <ul class="info">
       <li><a href="srfi-203.html">The SRFI Document</a></li>
