Add references to two potential substrates

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-07-09 12:52:57 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-07-14 22:46:09 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -224,7 +224,9 @@ identifier" corresponds to a file name.</p>
 </LI>
 
 <LI> Racket SICP Library, Picture Language.
-    <A HREF="https://docs.racket-lang.org/sicp-manual/SICP_Picture_Language.html"> Link </A>
+<A HREF="https://docs.racket-lang.org/sicp-manual/SICP_Picture_Language.html"> Link </A>
+<A HREF="https://github.com/sicp-lang/sicp/blob/master/sicp-pict/main.rkt"> Source </A>
+
 </LI>
 
 <LI> Structure and Interpretation of Computer Programs, companion web site.
@@ -251,6 +253,11 @@ identifier" corresponds to a file name.</p>
 <LI> Unofficial PDF of SICP, second edition.
      <A HREF="https://web.mit.edu/alexmv/6.037/sicp.pdf"> PDF </A>,
      <A HREF="https://github.com/jrincayc/sicp-pdf"> Source </A>
+</LI>
+
+<LI> Kawa Picture Language. It is not compatible with SICP, but can be used as a substrate for an implementation if using a DomTerm-based REPL.
+     <A HREF="https://www.gnu.org/software/kawa/Composable-pictures.html"> Reference </A>,
+     <A HREF="https://www.gnu.org/software/kawa/tutorial/Pictures.html"> Tutorial </A>
 </LI>
 
 
