Fix error reported by W3C HTML Validator.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -195,7 +195,7 @@ Otherwise, the result is unspecified.</p>
 <p>
 The exemplar use of this SRFI can be found in the
 attached <code>srfi-sicp-pictures.org</code> file, which exploits
-the <code>org-display-inline-images</code> feature of Emacs&#39 <code>org-mode</code>.
+the <code>org-display-inline-images</code> feature of Emacs&#39; <code>org-mode</code>.
 </p>
 
 The code below is more or less a copy of the code from the test. When
