Use absolute link for CSS.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>SRFI 203: A Simple Picture Language in the Style of SICP</title>
     <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
-    <link rel="stylesheet" href="/srfi.css" type="text/css">
+    <link rel="stylesheet" href="https://srfi.schemers.org/srfi.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1"></head>
 
   <body>
