Publish second draft.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -19,6 +19,7 @@
   <li>Received: 2020-07-08</li>
   <li>60-day deadline: 2020-09-06</li>
   <li>Draft #1 published: 2020-07-08</li>
+  <li>Draft #2 published: 2020-08-25</li>
 </ul>
 
 <h2>Abstract</h2>
