Add an improvised automated test.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-09-03 12:16:00 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-09-04 09:20:18 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -292,7 +292,20 @@ SRFI.</p>
 
 <h2>Acknowledgements</h2>
 
-??? credit where it is due
+<ul>
+<li>
+John Cowan, for suggesting how to improve the rationanale.
+</li>
+<li>
+Per Bothner, for suggesting to make a Kawa implementation.
+</li>
+<li>
+Arthur A. Gleckler, for helping with the SRFI process.
+</li>
+<li>
+Gerald J. Sussman, for discovering the pedagogical power of functional geometry.
+</li>
+</ul>
 
 
 <h2>Copyright</h2>
