Fix spelling error.  Improve grammar.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -295,10 +295,10 @@ SRFI.</p>
 
 <ul>
 <li>
-John Cowan, for suggesting how to improve the rationanale.
+John Cowan, for suggesting how to improve the rationale.
 </li>
 <li>
-Per Bothner, for suggesting to make a Kawa implementation.
+Per Bothner, for suggesting that I make a Kawa implementation.
 </li>
 <li>
 Arthur A. Gleckler, for helping with the SRFI process.
