--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-09-04 09:20:18 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-09-04 13:08:55 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -304,6 +304,9 @@ Arthur A. Gleckler, for helping with the SRFI process.
 </li>
 <li>
 Gerald J. Sussman, for discovering the pedagogical power of functional geometry.
+</li>
+<li>
+Wolfgang Corcoran-Mathe, for an in-depth review.
 </li>
 </ul>
 
