--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                    type="hidden"
                    value="srfi-203@srfi.schemers.org"></form></a></li></ul>
     <h2>Abstract</h2><p>This SRFI proposes a simple library for programmatic drawing of
-pictures compatible with the Section 2.2.4 of the Structure and
-Interpretation of Computer Programs.</p>
+pictures compatible with Section 2.2.4 of <cite>Structure and
+Interpretation of Computer Programs</cite>.</p>
 
 <p>It aims to close the gap between the Scheme suggested for study in
-the book and the portable Scheme.</p></body></html>
+the book and portable Scheme.</p></body></html>
