--- a/srfi-203.html
+++ b/srfi-203.html
@@ -20,6 +20,7 @@
   <li>60-day deadline: 2020-09-06</li>
   <li>Draft #1 published: 2020-07-08</li>
   <li>Draft #2 published: 2020-08-25</li>
+  <li>Draft #3 published: 2020-09-15</li>
 </ul>
 
 <h2>Abstract</h2>
