--- a/srfi-203.html
+++ b/srfi-203.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2020-09-15 23:14:47 lockywolf> -->
+<!DOCTYPE html> <!-- Time-stamp: <2020-09-16 09:43:03 lockywolf> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -105,6 +105,30 @@ which amount to less than forty.
 <!-- Defines a system-dependent name for a file. -->
 <!-- </DL> -->
 
+A "canvas" is anything that the drawing procedures draw on.  It may be
+a window, or a file, or some other drawing device. Due to the great variety of available Scheme implementations and hardware on which they run, it is hard to specify what is a canvas precisely, but it should be a certain location where the result of the drawing procedures is stored. It may be a file, a buffer, a window, or a certain Scheme object dedicated to keep a list of instructions to be flushed to a real graphics system later.
+
+As far as the code of the SICP is concerned, it is legitimate to call
+any drawing routine at any time, without any boilerplate code, do "draw".
+So, each of the drawing routines have to be creating a canvas if it
+does not exist.
+They should, however, draw on an existing one if it does exist.
+
+Many systems are likely to use a so-called "double-buffering"
+or "delayed drawing" technique, in which drawing and displaying what has been
+drawn are two different operations.
+
+On the other hand, some systems are expected to try and implement this SRFI
+in a "value-based" way, that is to change the state of the display by
+using some display operation on a Scheme
+value. (This is the approach
+used by the Kawa sample implementation, which displays the "picture
+value" returned by <code>canvas-refresh</code> in a graphical REPL.)
+
+Other systems may use other routines not specified by this SRFI to
+display the "picture value", if pictures are represented as values.
+
+
 <DL>
 <DT><U>Procedure:</U> <code>(canvas-reset)</code>
 <DD>
@@ -116,7 +140,7 @@ draw is blank. The return value is unspecified.
 to <code>(canvas-reset)</code> is hard. If the graphics system only supports
 a single graphical display (as the DOS systems used to), this procedure
 is expected to make this display empty.
-If the system is window-based, it is expected that this procedure produce a
+If the system is window-based, it is likely that this procedure should produce a
 new window.
 If the only drawing is done at the moment that the "picture value" is
 output into the REPL, this procedure is expected to do some off-screen
@@ -127,50 +151,43 @@ procedures will be drawing on an empty canvas.
 
 <DT><U>Procedure:</U> <code>(canvas-refresh)</code>
 <DD>
-Returns a system-dependent identifier (not to be confused with Scheme
-identifiers) of the canvas on which the procedures from
-this package may have drawn.
-The canvas may not exist unless it has been drawn on.
+
+Updates the display in an implementation-defined manner to reflect the
+state of the canvas. Returns a system-dependent identifier (not to be
+confused with Scheme identifiers) of the canvas. The canvas may not
+exist unless it has been drawn on.
 
 <p>
-<i>Explanation:</i> a "canvas" is anything that the drawing procedures draw on.
-It may be a window, or a file, or some other drawing device.
-As far as the code of the SICP is concerned, it is legitimate to call
-any drawing routine at any time, without any boilerplate code, do "draw".
-So, each of the drawing routines have to be creating a canvas if it
-does not exist.
-They can, however, draw on an existing one if it does exist.
-Many systems, however, are likely to use a so-called "double-buffering"
-or "delayed drawing" technique, in which drawing and displaying what has been
-drawn are two different operations.
-On the other hand, some systems are expected to try and implement this SRFI
-in a "value-based" way, that is to change the state of the display by
-using some display operation on a scheme value.
+<i>Explanation:</i> 
+
 <code>(canvas-refresh)</code> is an attempt to reconcile as many drawing
 approaches as possible.
+
 After a call to <code>(canvas-refresh)</code> the state of the display
 (whatever it may be) is expected to be a faithful representation of the
 image drawn by a sequence of calls to the drawing routines, regardless of
 the underlying approach that a system is using.
-Therefore, if the system "displays" the return value in some sort of a
-graphical REPL (like Kawa does), <code>(canvas-refresh)</code> returns a
+
+If the system "displays" the return value in some sort of a
+graphical REPL (like the Kawa sample implementation does), <code>(canvas-refresh)</code> returns a
 "picture value", that is expected to be displayed by the REPL.
 If the system has a separate windowing subsystem, not connected to the
 REPL in any meaningful way, the call to <code>(canvas-refresh)</code>
 should guarantee that the window, on which the canvas is displayed,
 is presenting the final result of the drawing and displaying to the user.
 
-One difficulty happens if no drawing operations have been called before a
-call to <code>(canvas-refresh)</code>. The implementations are expected to
-do something reasonable. In the case of the reference implementation,
+If <code>(canvas-refresh)</code> is called and no canvas exists, the implementations are expected to
+do something reasonable. In the case of the sample file-based implementation,
 <code>(canvas-refresh)</code> returns a file name that could have been
 used for drawing, which may or may not exist.
 In case of a window-based implementation, it is reasonable to return
-a "window handle" of a canvas window (which could be later used to
-destroy this window), but since no window has been created, the implementation
-could return anything that could serve as a valid window identifier.
+a value that could serve as a valid window identifier.
 If an implementation displays images in the REPL,
-<code>(canvas-refresh)</code> may return an empty picture value.
+<code>(canvas-refresh)</code> might return an empty picture value.
+
+<code>(canvas-refresh)</code> thus has both "pure" and side-effecting
+semantics: it may change the display, or it may simply return a value
+which can be displayed, or it may do nothing.
 </p>
 
 <DT><U>Procedure:</U> <code>(canvas-cleanup)</code>
