--- a/srfi-203.html
+++ b/srfi-203.html
@@ -112,23 +112,21 @@ which amount to less than forty.
 A "canvas" is anything that the drawing procedures draw on.  It may be
 a window, or a file, or some other drawing device. Due to the great variety of available Scheme implementations and hardware on which they run, it is hard to specify what is a canvas precisely, but it should be a certain location where the result of the drawing procedures is stored. It may be a file, a buffer, a window, or a certain Scheme object dedicated to keep a list of instructions to be flushed to a real graphics system later.
 
-As far as the code of the SICP is concerned, it is legitimate to call
-any drawing routine at any time, without any boilerplate code, do "draw".
-So, each of the drawing routines have to be creating a canvas if it
+As far as the code of SICP is concerned, it is legitimate to call
+any drawing routine at any time, without prior initialization of a canvas.
+So, each of the drawing routines have to create a canvas if it
 does not exist.
 They should, however, draw on an existing one if it does exist.
 
 Many systems are likely to use a so-called "double-buffering"
 or "delayed drawing" technique, in which drawing and displaying what has been
 drawn are two different operations.
-
 On the other hand, some systems are expected to try and implement this SRFI
 in a "value-based" way, that is to change the state of the display by
 using some display operation on a Scheme
 value. (This is the approach
 used by the Kawa sample implementation, which displays the "picture
 value" returned by <code>canvas-refresh</code> in a graphical REPL.)
-
 Other systems may use other routines not specified by this SRFI to
 display the "picture value", if pictures are represented as values.
 
@@ -136,19 +134,19 @@ display the "picture value", if pictures are represented as values.
 <DL>
 <DT><U>Procedure:</U> <code>(canvas-reset)</code>
 <DD>
-Ensures that the canvas on which subsequent calls to drawing procedures shall
+Ensures that the canvas on which subsequent calls to drawing procedures will
 draw is blank. The return value is unspecified.
 
 <p>
-<i>Explanation: </i> graphics systems differ, and giving a precise definition
+<i>Explanation:</i> Graphics systems differ, and giving a precise definition
 to <code>(canvas-reset)</code> is hard. If the graphics system only supports
 a single graphical display (as the DOS systems used to), this procedure
 is expected to make this display empty.
-If the system is window-based, it is likely that this procedure should produce a
+If the system is window-based, it will probably create a
 new window.
 If the only drawing is done at the moment that the "picture value" is
 output into the REPL, this procedure is expected to do some off-screen
-operations that will ensure that the subsequent calls to the drawing
+operations that will ensure that subsequent calls to the drawing
 procedures will be drawing on an empty canvas.
 </p>
 
@@ -157,7 +155,7 @@ procedures will be drawing on an empty canvas.
 <DD>
 Updates the display in an implementation-defined manner to reflect the
 state of the canvas. Returns a system-dependent identifier (not to be
-confused with Scheme identifiers) of the canvas.
+confused with a Scheme identifier) of the canvas.
 
 The canvas may not exist unless it has been drawn on.
 
