Format single-line paragraph.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -110,8 +110,14 @@ which amount to less than forty.
 <!-- </DL> -->
 
 <p>
-A "canvas" is anything that the drawing procedures draw on.  It may be
-a window, or a file, or some other drawing device. Due to the great variety of available Scheme implementations and hardware on which they run, it is hard to specify what is a canvas precisely, but it should be a certain location where the result of the drawing procedures is stored. It may be a file, a buffer, a window, or a certain Scheme object dedicated to keep a list of instructions to be flushed to a real graphics system later.
+A "canvas" is anything that the drawing procedures draw on. It may be
+a window, or a file, or some other drawing device. Due to the great
+variety of available Scheme implementations and hardware on which they
+run, it is hard to specify what is a canvas precisely, but it should
+be a certain location where the result of the drawing procedures is
+stored. It may be a file, a buffer, a window, or a certain Scheme
+object dedicated to keep a list of instructions to be flushed to a
+real graphics system later.
 </p>
 
 <p>
