--- a/srfi-203.html
+++ b/srfi-203.html
@@ -123,7 +123,7 @@ real graphics system later.
 <p>
 As far as the code of SICP is concerned, it is legitimate to call
 any drawing routine at any time, without prior initialization of a canvas.
-So, each of the drawing routines have to create a canvas if it
+So, each of the drawing routines has to create a canvas if it
 does not exist.
 They should, however, draw on an existing one if it does exist.
 </p>
